--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,42 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: WoiluID # Your GitHub organization or username, where this repository lives
+repo: Woilu-Status # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: Woilu
+    url: https://woilu.com
+  - name: Woilu Shortlink
+    url: https://woilu.net
+  - name: Al Khwarizmi Link Tree
+    url: https://woilu.org
+  #- name: IPv6 test
+  #  url: forwardemail.net
+  #  port: 80
+  #  check: "tcp-ping"
+  #  ipv6: true
+  
+assignees: # Users to assign downtime issues (optional)
+  - AzharRizkiZ
+  - AzharRizky
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.woilu.com
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://woilu.net/assets/images/Woilu.png
+  name: Woilu Website Status
+  introTitle: "**Woilu** is part of Mineversal & owned by Al Khwarizmi."
+  introMessage: This is a status page which uses **real-time** data from our [Mineversal Status](https://github.com/Mineversal/Mineversal-Status). No server required — just GitHub Actions, Issues, and Pages.
   navbar:
     - title: Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+    - title: Creator
+      href: https://woilu.com
+  favicon: https://woilu.net/assets/images/favicon.ico
+  theme: light
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
